--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@biesbjerg/ng2-translate-po-loader": "^0.2.1",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.15",
-    "bootstrap": "^4.0.0-alpha.5",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.15",
+    "bootstrap": "4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.4",
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "^2.3.1",
     "@biesbjerg/ng2-translate-extract": "^0.3.5",
     "@types/jasmine": "^2.5.40",
+    "@types/lodash": "^4.14.48",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.24",
     "codelyzer": "~2.0.0-beta.1",
