--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Specifies intentionally untracked files to ignore when using Git
-# http://git-scm.com/docs/gitignore
+# See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
 /dist
