--- a/package.json
+++ b/package.json
@@ -36,11 +36,11 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
-    "@biesbjerg/ng2-translate-extract": "^0.3.5",
+    "@biesbjerg/ng2-translate-extract": "^0.5.1",
     "@types/jasmine": "^2.5.40",
     "@types/lodash": "^4.14.48",
-    "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.24",
+    "@types/node": "^7.0.0",
+    "angular-cli": "^1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -53,7 +53,7 @@
     "phantomjs-prebuilt": "^2.1.14",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
+    "tslint": "^4.3.0",
     "typescript": "~2.0.10"
   }
 }
