--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxy.conf.js",
     "lint": "tslint \"src/**/*.ts\"",
     "test": "ng test",
     "test:ci": "ng test --single-run --code-coverage --lint",
@@ -32,7 +32,7 @@
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.2"
+    "zone.js": "0.7.4"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
@@ -42,6 +42,7 @@
     "@types/node": "^7.0.0",
     "angular-cli": "^1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
+    "https-proxy-agent": "^1.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "~1.3.0",
