--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:ci": "ng test --single-run --code-coverage --lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
-    "translations:extract": "ng2-translate-extract --dir ./src --output ./src/translations --format=pot --clean"
+    "translations:extract": "ng2-translate-extract --dir ./src --output ./src/translations --format=pot --clean",
+    "docs": "hads ./docs -o"
   },
   "private": true,
   "dependencies": {
@@ -43,6 +44,7 @@
     "@types/node": "^7.0.0",
     "angular-cli": "^1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
+    "hads": "^1.3.0",
     "https-proxy-agent": "^1.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
