--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "build": "ng build --aot --prod",
     "start": "ng serve --proxy-config proxy.conf.js",
-    "lint": "tslint \"src/**/*.ts\"",
+    "lint": "tslint \"src/**/*.ts\" && htmlhint \"src\"",
     "test": "ng test",
     "test:ci": "ng test --single-run --code-coverage --lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -45,6 +45,7 @@
     "angular-cli": "^1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "hads": "^1.3.0",
+    "htmlhint": "^0.9.13",
     "https-proxy-agent": "^1.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
