--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "build": "ng build --aot --prod",
     "start": "ng serve --proxy-config proxy.conf.js",
-    "lint": "tslint \"src/**/*.ts\" && htmlhint \"src\"",
+    "lint": "tslint \"src/**/*.ts\" && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\"",
     "test": "ng test",
     "test:ci": "ng test --single-run --code-coverage --lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
@@ -57,6 +57,8 @@
     "karma-remap-istanbul": "^0.2.1",
     "phantomjs-prebuilt": "^2.1.14",
     "protractor": "~4.0.13",
+    "stylelint": "^7.7.1",
+    "stylelint-config-standard": "^15.0.1",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.10"
