--- a/.stylelintrc
+++ b/.stylelintrc
@@ -20,7 +20,8 @@
     "selector-no-id": true,
     "selector-no-qualifying-type": true,
     "selector-no-universal": true,
+    "unit-whitelist": ["px", "%", "rem", "vw", "vh", "deg"],
     "max-line-length": 120,
-    "no-unsupported-browser-features": true
+    "no-unsupported-browser-features": [true, { "ignore": ["rem"] }]
   }
 }
