--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "0.7.4"
+    "zone.js": "^0.7.6"
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
