--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "@types/jasmine": "^2.5.40",
     "@types/lodash": "^4.14.48",
     "@types/node": "^7.0.0",
-    "angular-cli": "^1.0.0-beta.25.5",
+    "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "hads": "^1.3.1",
     "htmlhint": "^0.9.13",
     "https-proxy-agent": "^1.0.0",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
+    "jasmine-spec-reporter": "^3.2.0",
     "karma": "~1.3.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
