--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "protractor": "~4.0.13",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
-    "ts-node": "1.2.1",
+    "ts-node": "^2.0.0",
     "tslint": "^4.3.0",
     "typescript": "~2.0.10"
   }
