--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "build": "ng build --aot --prod",
     "start": "ng serve --proxy-config proxy.conf.js",
-    "lint": "tslint \"src/**/*.ts\" && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\"",
+    "lint": "tslint \"src/**/*.ts\" \"e2e/**/*.ts\" && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\"",
     "test": "ng test",
     "test:ci": "ng test --single-run --code-coverage --lint",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
