--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@angular/compiler-cli": "^2.3.1",
     "@biesbjerg/ng2-translate-extract": "^0.5.1",
     "@types/jasmine": "^2.5.40",
-    "@types/lodash": "^4.14.48",
+    "@types/lodash": "4.14.50",
     "@types/node": "^7.0.0",
     "angular-cli": "1.0.0-beta.26",
     "codelyzer": "~2.0.0-beta.1",
