--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "ng": "ng",
     "build": "ng build --aot --prod",
     "start": "ng serve --proxy-config proxy.conf.js",
-    "lint": "tslint \"src/**/*.ts\" \"e2e/**/*.ts\" && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\"",
+    "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\"",
     "test": "ng test",
-    "test:ci": "ng test --single-run --code-coverage --lint",
+    "test:ci": "npm run lint && ng test --single-run --code-coverage",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "translations:extract": "ng2-translate-extract --dir ./src --output ./src/translations --format=pot --clean",
@@ -38,11 +38,11 @@
   },
   "devDependencies": {
     "@angular/compiler-cli": "^2.3.1",
-    "@biesbjerg/ng2-translate-extract": "^0.5.1",
+    "@biesbjerg/ng2-translate-extract": "^0.6.0",
     "@types/jasmine": "^2.5.40",
     "@types/lodash": "4.14.50",
     "@types/node": "^7.0.0",
-    "angular-cli": "1.0.0-beta.26",
+    "angular-cli": "^1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
     "hads": "^1.3.1",
     "htmlhint": "^0.9.13",
