--- a/package.json
+++ b/package.json
@@ -37,12 +37,12 @@
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
+    "@angular/cli": "1.0.0-beta.30",
     "@angular/compiler-cli": "^2.3.1",
     "@biesbjerg/ng2-translate-extract": "^0.6.0",
     "@types/jasmine": "^2.5.40",
     "@types/lodash": "4.14.50",
     "@types/node": "^7.0.0",
-    "angular-cli": "^1.0.0-beta.28.3",
     "codelyzer": "~2.0.0-beta.1",
     "hads": "^1.3.1",
     "htmlhint": "^0.9.13",
