Stylelint config update

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -22,6 +22,9 @@
     "selector-no-universal": true,
     "unit-whitelist": ["px", "%", "rem", "vw", "vh", "deg"],
     "max-line-length": 120,
-    "no-unsupported-browser-features": [true, { "ignore": ["rem"] }]
+    "no-unsupported-browser-features": [true, {
+      "ignore": ["rem"],
+      "severity": "warning"
+    }]
   }
 }
