--- a/package.json
+++ b/package.json
@@ -10,22 +10,21 @@
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\"",
     "test": "ng test",
     "test:ci": "npm run lint && ng test --single-run --code-coverage",
-    "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor",
+    "e2e": "ng e2e",
     "translations:extract": "ng2-translate-extract --dir ./src --output ./src/translations --format=pot --clean",
     "docs": "hads ./docs -o",
     "env": "env2json npm_package_version -o src/environments/.env.json"
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^2.3.1",
-    "@angular/compiler": "^2.3.1",
-    "@angular/core": "^2.3.1",
-    "@angular/forms": "^2.3.1",
-    "@angular/http": "^2.3.1",
-    "@angular/platform-browser": "^2.3.1",
-    "@angular/platform-browser-dynamic": "^2.3.1",
-    "@angular/router": "^3.3.1",
+    "@angular/common": "^2.4.0",
+    "@angular/compiler": "^2.4.0",
+    "@angular/core": "^2.4.0",
+    "@angular/forms": "^2.4.0",
+    "@angular/http": "^2.4.0",
+    "@angular/platform-browser": "^2.4.0",
+    "@angular/platform-browser-dynamic": "^2.4.0",
+    "@angular/router": "^3.4.0",
     "@biesbjerg/ng2-translate-po-loader": "^0.2.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.20",
     "bootstrap": "4.0.0-alpha.6",
@@ -35,11 +34,11 @@
     "ng2-translate": "^5.0.0",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.7.6"
+    "zone.js": "^0.7.2"
   },
   "devDependencies": {
-    "@angular/cli": "1.0.0-beta.30",
-    "@angular/compiler-cli": "^2.3.1",
+    "@angular/cli": "1.0.0-beta.31",
+    "@angular/compiler-cli": "^2.4.0",
     "@biesbjerg/ng2-translate-extract": "^0.6.0",
     "@types/jasmine": "^2.5.40",
     "@types/lodash": "4.14.50",
@@ -56,9 +55,9 @@
     "karma-jasmine": "^1.0.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "protractor": "~4.0.13",
+    "protractor": "~5.1.0",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^16.0.0",
     "ts-node": "^2.0.0",
