--- a/.gitignore
+++ b/.gitignore
@@ -43,7 +43,7 @@ npm-debug.log
 testem.log
 /typings
 /reports
-/src/translations/template.pot
+/src/translations/template.*
 /src/environments/.env.json
 
 # E2E
