--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "ngx-starter-kit",
   "version": "0.9.6",
   "license": "MIT",
-  "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "build": "npm run env && ng build --aot --prod",
@@ -32,7 +31,6 @@
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
-    "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
@@ -42,7 +40,7 @@
     "@types/jasmine": "^2.5.40",
     "@types/lodash": "^4.14.52",
     "@types/node": "^7.0.0",
-    "codelyzer": "~2.0.0-beta.4",
+    "codelyzer": "~2.0.0",
     "env2json": "^1.0.0",
     "hads": "^1.3.1",
     "htmlhint": "^0.9.13",
@@ -50,7 +48,7 @@
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "^3.2.0",
     "karma": "~1.5.0",
-    "karma-cli": "^1.0.1",
+    "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^0.2.0",
     "karma-jasmine": "^1.1.0",
     "karma-junit-reporter": "^1.2.0",
@@ -59,8 +57,8 @@
     "protractor": "~5.1.0",
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^16.0.0",
-    "ts-node": "^2.0.0",
-    "tslint": "^4.4.2",
+    "ts-node": "~2.0.0",
+    "tslint": "~4.4.2",
     "typescript": "~2.2.1"
   }
 }
