Refactored json require as proper imports

--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -14,7 +14,8 @@
     "outDir": "../out-tsc/app",
     "target": "es5",
     "module": "es2015",
-    "baseUrl": ""
+    "baseUrl": "",
+    "types": []
   },
   "exclude": [
     "test.ts",
