--- a/src/tsconfig.spec.json
+++ b/src/tsconfig.spec.json
@@ -6,7 +6,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [
-      "es2016"
+      "es2016",
+      "dom"
     ],
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
