--- a/package.json
+++ b/package.json
@@ -1,65 +1,46 @@
 {
-  "name": "ngx-starter-kit",
+  "name": "generator-ngx-app",
   "version": "1.0.0",
+  "description": "Web project starter kit including modern tools and workflow based on angular-cli, best practices from the community, a scalable base template and a good learning base.",
+  "repository": "angular-starter-kit/generator-ngx-app",
+  "keywords": [
+    "yeoman-generator",
+    "ngx",
+    "angular",
+    "angular-cli",
+    "bootstrap",
+    "scalable",
+    "enterprise",
+    "scaffold",
+    "boilerplate",
+    "seed",
+    "app",
+    "typescript",
+    "sass",
+    "mobile",
+    "web"
+  ],
+  "author": "Yohan Lasorsa",
   "license": "MIT",
+  "preferGlobal": true,
+  "main": "index.js",
   "scripts": {
-    "ng": "ng",
-    "build": "npm run env && ng build --aot --prod",
-    "start": "ng serve --proxy-config proxy.conf.js",
-    "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\"",
-    "test": "ng test",
-    "test:ci": "npm run lint && ng test --single-run --code-coverage",
-    "e2e": "ng e2e",
-    "translations:extract": "ng2-translate-extract --dir ./src --output ./src/translations --format=json --clean",
-    "docs": "hads ./docs -o",
-    "env": "env2json npm_package_version -o src/environments/.env.json",
-    "generate": "ng generate"
+    "test": "scripts/test.sh",
+    "deploy": "scripts/deploy.sh",
+    "postpublish": "git tag -a $npm_package_version -m '$npm_package_version' && git push --tags"
   },
-  "private": true,
   "dependencies": {
-    "@angular/common": "^2.4.0",
-    "@angular/compiler": "^2.4.0",
-    "@angular/core": "^2.4.0",
-    "@angular/forms": "^2.4.0",
-    "@angular/http": "^2.4.0",
-    "@angular/platform-browser": "^2.4.0",
-    "@angular/platform-browser-dynamic": "^2.4.0",
-    "@angular/router": "^3.4.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.20",
-    "@ngx-translate/core": "^6.0.0",
-    "bootstrap": "4.0.0-alpha.6",
-    "core-js": "^2.4.1",
-    "font-awesome": "^4.7.0",
-    "lodash": "^4.17.4",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.7.6"
+    "chalk": "^1.1.1",
+    "insight": "^0.8.4",
+    "lodash": "^4.13.1",
+    "node-dir": "^0.1.14",
+    "yeoman-generator": "^1.1.0",
+    "yosay": "^2.0.0"
   },
-  "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.1",
-    "@angular/compiler-cli": "^2.4.0",
-    "@biesbjerg/ng2-translate-extract": "^0.6.0",
-    "@types/jasmine": "^2.5.40",
-    "@types/lodash": "^4.14.52",
-    "@types/node": "^7.0.0",
-    "codelyzer": "~2.0.0",
-    "env2json": "^1.0.0",
-    "hads": "^1.3.1",
-    "htmlhint": "^0.9.13",
-    "https-proxy-agent": "^1.0.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
-    "karma": "~1.5.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^0.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-junit-reporter": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "phantomjs-prebuilt": "^2.1.14",
-    "protractor": "~5.1.0",
-    "stylelint": "^7.7.1",
-    "stylelint-config-standard": "^16.0.0",
-    "ts-node": "~2.1.0",
-    "tslint": "~4.5.1",
-    "typescript": "~2.2.1"
-  }
+  "engines": {
+    "node": ">=5.0.0"
+  },
+  "files": [
+    "generators/app"
+  ]
 }
