Misc small fixes

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-ngx-app",
   "version": "1.0.0",
-  "description": "Angular 2+ industrial project generator based on angular-cli with best practices from the community, a scalable starter template and a good learning base.",
+  "description": "Angular 2+ enterprise-grade project generator based on angular-cli with best practices from the community, a scalable starter template and a good learning base.",
   "repository": "angular-starter-kit/generator-ngx-app",
   "keywords": [
     "yeoman-generator",
