--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "keywords": [
     "yeoman-generator",
     "ngx",
+    "rocket",
     "angular",
     "angular-cli",
     "bootstrap",
@@ -31,11 +32,9 @@
     "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -m 'Updated changelog' && git push"
   },
   "dependencies": {
+    "@ngx-rocket/core": "^0.9.0",
     "chalk": "^1.1.1",
     "insight": "^0.8.4",
-    "lodash": "^4.13.1",
-    "node-dir": "^0.1.14",
-    "yeoman-generator": "^1.1.0",
     "yosay": "^2.0.0"
   },
   "engines": {
