Renaming to ngx-rocket

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "generator-ngx-app",
+  "name": "generator-ngx-rocket",
   "version": "1.2.2",
   "description": "Angular 4+ enterprise-grade project generator based on angular-cli with best practices from the community, a scalable starter template and a good learning base.",
-  "repository": "angular-starter-kit/generator-ngx-app",
+  "repository": "ngx-rocket/generator-ngx-rocket",
   "keywords": [
     "yeoman-generator",
     "ngx",
     "rocket",
+    "app",
+    "generator",
     "angular",
     "angular-cli",
     "bootstrap",
@@ -15,7 +17,6 @@
     "scaffold",
     "boilerplate",
     "seed",
-    "app",
     "typescript",
     "sass",
     "mobile",
