--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,7 @@ install:
   - npm link
 
 before_script:
+  - export DBUS_SESSION_BUS_ADDRESS=/dev/null
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
 
