--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test": "npm run lint -s && scripts/test.sh",
     "deploy": "scripts/deploy.sh",
     "postpublish": "git tag -a $npm_package_version -m '$npm_package_version' && git push --tags",
-    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -m 'Updated changelog' && git push"
+    "changelog": "github_changelog_generator && git add CHANGELOG.md && git commit -m 'Updated changelog'"
   },
   "dependencies": {
     "@ngx-rocket/ascii-logo": "^1.0.0",
