--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,10 @@ environment:
 #    - nodejs_version: "6"
 #    - nodejs_version: "7"
     - nodejs_version: ""
+      CASE=web/bootstrap
+
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 install:
   - ps: Install-Product node $env:nodejs_version
@@ -16,3 +20,6 @@ test_script:
   - bash -c "npm test"
 
 build: off
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
