--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
 #    - nodejs_version: "6"
 #    - nodejs_version: "7"
     - nodejs_version: ""
-      CASE=web/bootstrap
+      CASE: "web/bootstrap"
 
 init:
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
