--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,9 +5,6 @@ environment:
     - nodejs_version: ""
       CASE: "web/bootstrap"
 
-init:
-  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-
 install:
   - ps: Install-Product node $env:nodejs_version
   - npm install -g yo
@@ -17,9 +14,7 @@ install:
 test_script:
   - node -v
   - npm -v
-  - bash -c "npm test"
+  - npm run lint
+  - bash -c "scripts/test.sh"
 
 build: off
-
-on_finish:
-  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
