--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,9 +1,12 @@
-environment:
+branches:
+  only:
+    - master
+
+ environment:
   matrix:
-#    - nodejs_version: "6"
-#    - nodejs_version: "7"
+    - nodejs_version: "6"
+    - nodejs_version: "7"
     - nodejs_version: ""
-      CASE: "web/bootstrap"
 
 install:
   - ps: Install-Product node $env:nodejs_version
