--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ env:
     - CASE=web+cordova/bootstrap-authentication
     - CASE=web+cordova/ionic-authentication
     - CASE=web+cordova/material-authentication
+      NGX_PACKAGE_MANAGER=yarn
 
 install:
   - npm install -g yo
