--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,6 +21,7 @@ environment:
     - CASE: "web+cordova/bootstrap-authentication"
     - CASE: "web+cordova/ionic-authentication"
     - CASE: "web+cordova/material-authentication"
+      NGX_PACKAGE_MANAGER: "yarn"
 
 matrix:
   fast_finish: true
