--- a/generators/app/templates/tsconfig.json
+++ b/generators/app/templates/tsconfig.json
@@ -16,7 +16,8 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "strict": true
   },
   "angularCompilerOptions": {
     "preserveWhitespaces": false
