--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,7 +28,7 @@ matrix:
 
 install:
   - ps: Install-Product node $env:nodejs_version
-  - npm install -g yo yarn@latest
+  - npm install -g yarn@latest
   - npm install
   - npm link
 
