--- a/appveyor.yml
+++ b/appveyor.yml
@@ -27,6 +27,7 @@ matrix:
   fast_finish: true
 
 install:
+  - choco install googlechrome
   - ps: Install-Product node $env:nodejs_version
   - npm install -g yarn@latest
   - npm install
