--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "inquirer": "^5.0.1",
     "insight": "^0.9.0",
     "lodash.camelcase": "^4.3.0",
+    "lodash.get": "^4.4.2",
     "lodash.upperfirst": "^4.3.1",
     "minimist": "^1.2.0",
     "update-notifier": "^2.3.0",
