Try to set env for chrome headless error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,9 @@ jobs:
   build:
     docker:
       - image: circleci/node:8
+        env:
+          - DISPLAY=:99
+          - DBUS_SESSION_BUS_ADDRESS=/dev/null
     working_directory: ~/generator-ngx-rocket
     steps:
       - checkout
