--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ general:
 defaults: &defaults
   docker:
     - image: circleci/node:8-browsers
-  working_directory: ~/generator-ngx-rocket
+  working_directory: /tmp
 
 jobs:
   build:
@@ -36,14 +36,14 @@ jobs:
             - node_modules
           key: npm-dependencies-{{ checksum "package.json" }}
       - persist_to_workspace:
-          root: ~/generator-ngx-rocket
+          root: /tmp
           paths: *
 
   test:
     <<: *defaults
     steps:
       - attach_workspace:
-          at: ~/generator-ngx-rocket
+          at: /tmp
       - run:
           name: Run tests
           command: npm test app/cordova/bootstrap
