--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2
 
-aliases:
-  - &workspace_dir /workspace
-
 general:
   branches:
     only:
@@ -12,7 +9,7 @@ general:
 defaults: &defaults
   docker:
     - image: circleci/node:8-browsers
-  working_directory: /app
+  working_directory: ~/generator-ngx-rocket
 
 jobs:
   build:
@@ -38,15 +35,11 @@ jobs:
           paths:
             - node_modules
           key: npm-dependencies-{{ checksum "package.json" }}
-      - persist_to_workspace:
-          root: *workspace_dir
-          paths: *
 
   test:
     <<: *defaults
     steps:
-      - attach_workspace:
-          at: *workspace_dir
+      - checkout
       - run:
           name: Run tests
           command: npm test app/cordova/bootstrap
