--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,8 @@
 version: 2
 
+aliases:
+  - &workspace_dir ~/generator-ngx-rocket
+
 general:
   branches:
     only:
@@ -9,7 +12,7 @@ general:
 defaults: &defaults
   docker:
     - image: circleci/node:8-browsers
-  working_directory: ~/generator-ngx-rocket
+  working_directory: *workspace_dir
 
 jobs:
   build:
@@ -35,11 +38,16 @@ jobs:
           paths:
             - node_modules
           key: npm-dependencies-{{ checksum "package.json" }}
+      - save_cache:
+          paths:
+            - *workspace_dir
+          key: repository-{{ .Environment.CIRCLE_SHA1 }}
 
   test:
     <<: *defaults
     steps:
-      - checkout
+      - restore_cache:
+          key: repository-{{ .Environment.CIRCLE_SHA1 }}
       - run:
           name: Run tests
           command: npm test app/cordova/bootstrap
