--- a/generators/app/templates/_tsconfig.json
+++ b/generators/app/templates/_tsconfig.json
@@ -7,7 +7,11 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+<% if (props.strict) { -%>
+    "strict": true,
+<% } else { -%>
     "noImplicitAny": true,
+<% } -%>
     "suppressImplicitAnyIndexErrors": true,
     "target": "es5",
     "typeRoots": [
