Added strict mode test cases (#292)

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,12 +14,16 @@ environment:
     - CASE: "app/cordova/material-authentication"
     - CASE: "app/web/bootstrap"
     - CASE: "app/web/bootstrap-authentication"
+    - CASE: "app/web/bootstrap-strict"
     - CASE: "app/web/ionic"
     - CASE: "app/web/ionic-authentication"
+    - CASE: "app/web/ionic-strict"
     - CASE: "app/web/material"
     - CASE: "app/web/material-authentication"
+    - CASE: "app/web/material-strict"
     - CASE: "app/web/raw"
     - CASE: "app/web/raw-authentication"
+    - CASE: "app/web/raw-strict"
     - CASE: "app/web+cordova/bootstrap-authentication"
     - CASE: "app/web+cordova/ionic-authentication"
     - CASE: "app/web+cordova/material-authentication"
